# dynamic-fee-sharing

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
libs/damm-v2/: Cargo.toml
libs/dynamic-bonding-curve/: Cargo.toml
libs/dynamic-bonding-curve/src/: lib.rs
programs/dynamic-fee-sharing/: Cargo.toml
programs/dynamic-fee-sharing/proptest-regressions/tests/: fund_fee.txt
programs/dynamic-fee-sharing/src/: const_pda.rs  constants.rs  error.rs  event.rs  lib.rs  macros.rs
programs/dynamic-fee-sharing/src/instructions/: funding_fee.rs  ix_claim_creator_trading_fee.rs  ix_claim_damm_v2.rs  ix_claim_dbc_creator_trading_fee.rs  ix_claim_dbc_trading_fee.rs  ix_claim_fee.rs  ix_creator_withdraw_surplus_dbc.rs  ix_fund_by_claiming_fee.rs  ix_fund_fee.rs  ix_funding_by_claim_damm_v2.rs  ix_funding_by_claim_dbc_creator_surplus.rs  ix_funding_by_claim_dbc_creator_trading_fee.rs  ix_funding_by_claim_dbc_partner_surplus.rs  ix_funding_by_claim_dbc_partner_trading_fee.rs  ix_funding_by_claim_dbc_trading_fee.rs  ix_initialize_fee_vault.rs  ix_initialize_fee_vault_pda.rs  ix_partner_withdraw_surplus_dbc.rs  ix_withdraw_dbc_creator_surplus.rs  ix_withdraw_dbc_partner_surplus.rs  mod.rs
programs/dynamic-fee-sharing/src/math/: math_utils.rs  mod.rs  safe_math.rs
programs/dynamic-fee-sharing/src/state/: fee_vault.rs  mod.rs
programs/dynamic-fee-sharing/src/tests/: fund_fee.rs  mod.rs
programs/dynamic-fee-sharing/src/utils/: token.rs
tests/: claim_damm_v2.test.ts  claim_dbc_creator_trading_fee.test.ts  dynamic-fee-sharing.ts  fee_sharing.test.ts  fee_sharing_pda.test.ts
tests/common/: damm_v2.ts  dbc.ts  dfs.ts  index.ts  svm.ts
tests/common/idl/: dynamic_bonding_curve.ts
