[package]
name = "dynamic-fee-sharing"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_fee_sharing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
num_enum = "0.7.0"
ruint = "1.3.0"
static_assertions = "1.1.0"
const-crypto = "0.3.0"
damm-v2 = { path = "../../libs/damm-v2" }
dynamic-bonding-curve = { path = "../../libs/dynamic-bonding-curve" }

[dev-dependencies]
proptest = "1.2.0"